Фиксит путь опять

--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
       ></button>
     </div>
 
-    <script src="/js/task-08-gallery.js" type="module"></script>
+    <script src="./js/task-08-gallery.js" type="module"></script>
   </body>
 </html>
