--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
   </div>
 
-  <script src="index.js"></script>
+  <script src="./index.js"></script>
 </body>
 
 </html> 
