--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Gallery</title>
-  <!-- <link rel="stylesheet" href="./css/main.css" /> -->
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
   </div>
 
-  <script src="./index.js"></script>
+  <script src="index.js" type="module"></script>
 </body>
 
 </html> 
